Added gas wolf remodel, cleared hair system for only remodels (as requested by bijimio)
Signed-off-by: LtxPgm <ltxprogrammer@outlook.com>